# WFE

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  Dockerfile  HANDOFF.md  LICENSE  Makefile  README.md  requirements.txt
.claude/: launch.json
cases/: antalya.ini  antalya1km.ini  bubble_outflow.ini  dam_break.hpp  density_current.hpp  moist_blob.ini  mountain_wave.hpp  schaer.ini  schaer_rest.ini  straka.ini  turkey.ini  turkey6km.ini  warm_bubble.ini  wk82_supercell.ini
deploy/: README.md  config.env.example  launch_forecast.sh  vm_startup.sh
docs/: ARCHITECTURE.md  ENGINE_REVIEW.md  EQUATIONS.md  ROADMAP.md
docs/prompts/: FRONTEND_PROMPT.md  OPERATIONAL_PROMPT.md
scripts/: plot_density_current.py
server/: app.py  overlay.py  products.py  regions.py  terrain.py
src/: main.cpp  main2d.cpp  main3d.cpp  main_mw.cpp  types.hpp  types2d.hpp  types3d.hpp
src/core/: base_state.cpp  base_state.hpp  config.cpp  config.hpp  constants.hpp  cuda_check.hpp  field3d.hpp  grid.hpp  metric.cpp  metric.hpp  precision.hpp  thermo.hpp
src/dynamics/: boundary.cpp  boundary.hpp  integrator.cpp  integrator.hpp  kernels.cu  kernels.hpp  params.hpp  state.hpp
src/io/: input.cpp  input.hpp  output.cpp  output.hpp  writer.cpp  writer.hpp
src/physics/: kessler.cu  kessler.hpp  surface.cu  surface.hpp
src/solver/: swe1d.cpp  swe1d.hpp
src/solver/cuda/: euler2d_gpu.cu  euler2d_gpu.cuh  euler3d_gpu.cu  euler3d_gpu.cuh  swe1d_gpu.cu  swe1d_gpu.hpp
tools/: forecast_maps.py  get_terrain.py  plot_slice.py  prep_gfs.py  run_ensemble.py  run_forecast.py  run_operational.py  run_tests.py  to_netcdf.py  verify.py  verify_metar.py  verify_multi.py
web/: app.js  index.html
web-app/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
web-app/src/: App.tsx  api.ts  config.ts  index.css  main.tsx  theme.tsx
web-app/src/components/: ErrorBoundary.tsx  Header.tsx  LayerRail.tsx  MapView.tsx  Meteogram.tsx  PointPanel.tsx  SearchBar.tsx  TimeBar.tsx  icons.tsx
web-app/src/data/: cities.json
web-app/src/lib/: basemap.ts  fields.ts  format.ts  glpainter.ts  gridLoader.ts  lut.ts  painter.ts  particles.ts  quad.ts  ranges.ts
web-app/src/pages/: AboutPage.tsx  HomePage.tsx  MapPage.tsx
